app/k8s-test/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: employee-crud-strict-mtls
  namespace: employee-crud-test
spec:
  mtls:
    mode: STRICT
