app/k8s-test/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: employee-crud-test
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
