app/k8s-test/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: frontend-destination
  namespace: employee-crud-test
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
